--- a/ProjectPRJ301/web/index.html
+++ b/ProjectPRJ301/web/index.html
@@ -10,7 +10,7 @@
                 margin: 0;
                 padding: 0;
                 text-align: center;
-                background: url('IMAGE/fpthanoi01-130.jpg') no-repeat center center/cover;
+                background: url('IMAGE/Học tập trải nghiệm (1).png') no-repeat center center/cover;
                 background-size: cover;
                 height: 100vh;
                 display: flex;
@@ -46,7 +46,7 @@
                 display: block;
                 transition: transform 0.3s ease-in-out;
             }
-            
+
 
             .logo:hover {
                 transform: scale(1.1);
@@ -55,11 +55,12 @@
 
             .container {
                 position: absolute;
-                top: 33%;
+                top: 50%; /* Đổi từ 33% thành 50% */
                 left: 50%;
                 transform: translate(-50%, -50%);
                 text-align: center;
             }
+
 
             h1 {
                 font-size: 40px;
@@ -91,12 +92,12 @@
     </head>
     <body>
 
-        <a class="fpt" href="http://localhost:9999/StudentManagement" target="_blank">
-            <img src="IMAGE/fptulogo-removebg-preview.png" alt="FPT Logo" class="logo"/>
+        <a class="fpt" href="http://localhost:9999/ProjectPRJ301/" target="_blank">
+            <img src="IMAGE/StuGo.png" alt="FPT Logo" class="logo"/>
         </a>
 
         <div class="container">
-            <h1>Welcome to FPT University</h1>
+            <h1>Welcome to STUGO</h1>
             <a href="Login.jsp" class="btn">Đăng nhập</a>
         </div>
 
